[gd_scene load_steps=4 format=3 uid="uid://bdewtkthohd2a"]

[ext_resource type="Script" uid="uid://darv6fvabmokp" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="FontFile" uid="uid://bwbrfrad331uv" path="res://font/Daydream DEMO.otf" id="2_5d2l8"]
[ext_resource type="Texture2D" uid="uid://y0q35q45q3j1" path="res://icons/close.svg" id="2_kukqi"]

[node name="Pause Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myx47")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.19793725, 0.19793722, 0.19793722, 0.3137255)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -100.0
offset_right = 175.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="HFlowContainer" type="HFlowContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="stat" type="Button" parent="PanelContainer/HFlowContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5d2l8")
text = "Stat"

[node name="score" type="Button" parent="PanelContainer/HFlowContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5d2l8")
text = "score"

[node name="story" type="Button" parent="PanelContainer/HFlowContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5d2l8")
text = "story"

[node name="Close" type="Button" parent="PanelContainer/HFlowContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_kukqi")
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Continue" type="Button" parent="PanelContainer/HFlowContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5d2l8")
text = "Continue"

[node name="Restart" type="Button" parent="PanelContainer/HFlowContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5d2l8")
text = "Restart"

[node name="Main Menu" type="Button" parent="PanelContainer/HFlowContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5d2l8")
text = "Main Menu"

[connection signal="pressed" from="PanelContainer/HFlowContainer/HBoxContainer/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="PanelContainer/HFlowContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PanelContainer/HFlowContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/HFlowContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
